# user-contributions-analysis

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  lefthook.yml  pyproject.toml  ruff.toml
.beads/: metadata.json
docs/adr/: 0001-initial-architecture.md
src/contributions/: __init__.py  cli.py  config.py  models.py  narrative.py  summarizer.py
src/contributions/providers/: base.py  gitea.py  github.py  github_graphql.py
src/contributions/rendering/: report.py
src/contributions/rendering/templates/: report.html
tests/: conftest.py  test_gitea_provider.py  test_github_provider.py  test_models.py  test_narrative.py  test_report.py
