[project]
name = "contributions"
version = "0.1.0"
description = "Pull a user's public contributions from GitHub and Gitea, summarize them, and generate static HTML reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "click>=8.3.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
]

[project.scripts]
contributions = "contributions.cli:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contributions"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.9",
]
